tests/NormalTests/paczka1/fuzzy1/38514535.err
Error in line 4: Eex0tMBg_jo A74_ _5,8
Error in line 3: h0l A742 57,5
Error in line 18: PbNKgKsy3hH S112 5,49
Error in line 15: PbNKgKsy3hH A742 18,3
Error in line 22: S112 S112 36,1
Error in line 11: WMP S112 63,0
Error in line 32: swLucFPu S296 90,8
Error in line 24: PbNKgKsy3hH S112 6,3
